[package]
name = "throttler"
version = "0.1.0"
edition = "2021"
authors = ["HariTeja harriteja@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
throttler-storage = {version = "0.1.0", path = "../throttler-storage"}
